fix overflow

--- a/css/3d.css
+++ b/css/3d.css
@@ -228,6 +228,7 @@ transform: none;
     height:100vh;
     display: block;
     position: relative;
+    overflow: hidden;
     animation: appear;
     animation-duration: 2s;
     animation-iteration-count: 1;
@@ -237,10 +238,8 @@ video#bgvid {
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
     width: auto;
-    height: auto;
+    height: 100vh;
     z-index: -100;
     -ms-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
